Changes done for v2

--- a/uimodule/webapp/view/MainView.view.xml
+++ b/uimodule/webapp/view/MainView.view.xml
@@ -1,12 +1,34 @@
- <mvc:View controllerName="com.infocus.TimeApproval.controller.MainView"
-  displayBlock="true"
-  xmlns="sap.m"
-  xmlns:mvc="sap.ui.core.mvc">
-  <App id="idAppControl" >
-    <pages>
-      <Page title="{i18n>title}">
-        <content></content>
-      </Page>
-    </pages>
-  </App>
+<mvc:View controllerName="com.infocus.TimeApprovalV2.controller.MainView" xmlns:l="sap.ui.layout" xmlns:mvc="sap.ui.core.mvc"
+	xmlns:core="sap.ui.core" xmlns="sap.m" height="100%" displayBlock="true">
+	<App id="app" height="100%">
+		<l:Splitter id="_IDGenSplitter1" height="100%">
+			<l:contentAreas>
+				<Panel id="_IDGenPanel1" height="100%" class="sapUiNoContentPadding">
+					<layoutData>
+						<l:SplitterLayoutData size="20%"/>
+					</layoutData>
+					<content>
+						<OverflowToolbar>
+							<SearchField liveChange=".onSearch" width="100%"/>
+						</OverflowToolbar>
+						<List id="idList" items="{dataSet>/empList}" selectionChange=".onSelectionChange" mode="SingleSelectMaster" growing="true"
+							growingThreshold="50" includeItemInSelection="true">
+							<!--<StandardListItem title="{dataSet>Ename}" description="{dataSet>Regdate}"/>-->
+							<ObjectListItem title="{dataSet>Ename}">
+								<firstStatus>
+									<ObjectStatus text="TimeOut: {dataSet>TimeIn}"/>
+								</firstStatus>
+								<ObjectAttribute text=" TimeIn: {dataSet>TimeIn}"/>
+								<ObjectAttribute text="Date: {dataSet>RegDate}"/>
+							</ObjectListItem>
+						</List>
+					</content>
+				</Panel>
+				<Panel id="_IDGenPanel2" height="100%" class="sapUiNoContentPadding">
+					<core:Fragment fragmentName="com.infocus.TimeApprovalV2.view.DetailsFragment" type="XML"/>
+					<!--<mvc:XMLView id="DetailView" height="100%" viewName="com.infocus.TimeApproval.view.DetailsView"/>-->
+				</Panel>
+			</l:contentAreas>
+		</l:Splitter>
+	</App>
 </mvc:View>
